# custom-image-classifier

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_GUIDE.md  DOCS.md  GETTING_STARTED.md  INSTALL.md  SECURITY.md  app.py  cli.py  config.py  example_usage.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
models/: model.py
scripts/: train_model.py
templates/: index.html  predict.html  upload.html
utils/: predictor.py
